# db_university

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/students_test_app/: CMakeLists.txt  main.cpp  students_main_window.ui  studentsdbmainwindow.cpp  studentsdbmainwindow.h
db/: courses.sql  create_students_db.sql  db.sh  departments.sql  enrollments.sql  enrollments_funcs.sql  students_db_data.sql  students_db_funcs.sql  students_db_view.sql  students_profile.sql
src/: CMakeLists.txt  dbCore.cpp  dbCore.h  dbLoader.cpp  dbLoader.h  dbWriter.cpp  dbWriter.h  dbresult.cpp  dbstudents.cpp  dbstudents.hpp  students_db.qrc  university_db.cpp  university_pg_db.cpp  university_pg_db.hpp  university_singleton.cpp  university_singleton.hpp
src/dataaccess/: CMakeLists.txt  dbpgresult.cpp  dbpgresult.hpp  dbresult.cpp  dbresult.hpp  university_db.hpp  university_pg_db.cpp  university_pg_db.hpp
src/entities/: CMakeLists.txt  courses.cpp  courses.hpp  dbdepartment.cpp  dbdepartment.hpp  dbstudents.cpp  dbstudents.hpp  department.cpp  enrollments.cpp  enrollments.hpp  students.cpp  students.hpp  studentsprofile.cpp  studentsprofile.hpp
src/gui/: CMakeLists.txt  course_widget.ui  coursewidget.cpp  coursewidget.h  dbEntitiesForm.cpp  dbEntitiesForm.h  db_entities_form.ui  department_dialog.ui  department_widget.ui  departmentdialog.cpp  departmentdialog.h  departmentwidget.cpp  departmentwidget.h  enrollment_dialog.ui  student_widget.ui  studentwidget.cpp  studentwidget.h
